crates/biome_html_parser/tests/html_specs/ok/svelte/await_catch_no_then.svelte
{#await finixInit}
	<Icons.DotsBounce />
{:catch error}
	<p>Could not initialize form: {error.message}</p>
{/await}
