crates/biome_html_parser/tests/html_specs/error/svelte/await_duplicate_catch.svelte
{#await promise}
  <p>Loading...</p>
{:then value}
  <p>{value}</p>
{:catch error}
  <p>{error.message}</p>
{:catch anotherError}
  <p>{anotherError.message}</p>
{/await}
